<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context="com.example.admin1.datastoragedemo.MainActivity">

    <include layout="@layout/toolbar"
        android:id="@+id/tool"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/name"
        android:hint="@string/name"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/age"
        android:hint="@string/age"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/avg"
        android:hint="@string/avg"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/value"
        android:hint="@string/Value"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/flag"
        android:hint="@string/flag"/>
    <RadioGroup android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/radioGroup"
        android:orientation="horizontal">
        <RadioButton android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/True"
            android:id="@+id/true_value"/>
        <RadioButton android:layout_width="wrap_content"
        android:layout_height="wrap_content"
            android:text="@string/False"
            android:id="@+id/false_value"/>
    </RadioGroup>
</LinearLayout>
